# software-engineering-ws15

./: CMakeLists.txt  CelsiusToFahrenheitConverter.cpp  CelsiusToFahrenheitConverter.hpp  Command.cpp  Command.hpp  ConverterFactory.cpp  ConverterFactory.hpp  ConverterNotFound.hpp  CurrencyConverter.cpp  CurrencyConverter.hpp  Decorator.cpp  Decorator.hpp  DollarToEuroConverter.cpp  DollarToEuroConverter.hpp  EuroToBritishPoundConverter.cpp  EuroToBritishPoundConverter.hpp  FahrenheitToCelsiusConverter.cpp  FahrenheitToCelsiusConverter.hpp  GoldToEuroConverter.cpp  GoldToEuroConverter.hpp  InvalidInput.hpp  Inversion.cpp  Inversion.hpp  TempConverter.cpp  TempConverter.hpp  UnitConverter.cpp  UnitConverter.hpp  ValueOutOfRange.hpp  YenToEuroConverter.cpp  YenToEuroConverter.hpp  catch.hpp  converter.cpp  converter.hpp  currency_converter.cpp  currency_converter.hpp  dollartoeuroconverter.cpp  dollartoeuroconverter.hpp  group_info.txt  main.cpp  temp_converter.hpp  (+1 more)
debug/: array  debug  debug_array_sum.cpp  debug_me  debug_me.cc
test/: makefile  test  test.cpp
